--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/validator": "^13.15.2",
     "eslint": "^9.29.0",
@@ -23,6 +24,7 @@
     "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "validator": "^13.15.15"
